# modular-prompt-optimization

./: .gitignore  CLAUDE.md  README.md  evaluate.py  experiment.py  main.py  pyproject.toml
checkpoints/: scaledown-gpt-4o_wikidata_expert_persona_cot_checkpoint.json
dataset/: clean_simple_qa_100.json  simpleqa.json  test_data.json
experiments/: cove_experiment.ipynb  simpleqa_hallucination_analysis.ipynb  zeroshot-cot.ipynb
experiments/result/: scaledown-gpt-4o_simpleqa_small_cot_results.json  scaledown-gpt-4o_simpleqa_small_cot_uncertainty_results.json  scaledown-gpt-4o_simpleqa_small_cove_results.json  scaledown-gpt-4o_simpleqa_small_cove_uncertainty_results.json  scaledown-gpt-4o_simpleqa_small_expert_persona_cot_results.json  scaledown-gpt-4o_simpleqa_small_expert_persona_uncertainty_results.json
experiments/results/: csqa_zeroshot.json  csqa_zeroshot_cot.json  multiArith_zero_shot.json  multiArith_zero_shot_cot.json
result/: scaledown-gpt-4o_wikidata_expert_persona_cot_results.json
src/: __init__.py  dataset_loader.py  evaluate.py  gemini_client.py  pipeline.py  prompt_optimizer.py  prompts.py  task_runner.py  utils.py
src/prompt_optim/: combined.py
src/prompt_optim/common/CoT/: cot_chain.py
src/prompt_optim/common/CoTUncertainty/: cot_uncertainty_chain.py
src/prompt_optim/common/PersonaCoT/: persona_cot_chain.py
src/prompt_optim/common/PersonaUncertainty/: combined_chain.py
src/prompt_optim/cove/: cove_chains.py  cove_chains_google.py  cove_chains_hf.py  prompts.py
tests/: test_scaledown_api.py
(+2 files in other folders)
