[project]
name = "modular-prompt-optimization"
version = "0.1.0"
description = "A modular library for optimizing and evaluating LLM prompts with a focus on hallucination reduction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.31.0",
    "python-dotenv>=1.1.1",
]
